--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 
     :root {
         /* cores */
-        --cor-primaria: #645CBB;
-        --cor-secundaria: #EBC7E6;
-        --cor-terciaria: #BFACE2;
-        --cor-hover: #A084DC; 
+        --cor-primaria: #000000;
+        --cor-secundaria: #f6f6f6;
+        --cor-terciaria: #22D4FD;
+        --cor-hover: #272727;  
 
         /* fontes */
         --fonte-titulo: 'Krona One', sans-serif;
